# Soft-Proton-Analysis-for-NEBULA-Xplorer

./: README.md
exp_val/: .gitignore  CMakeLists.txt  README.md  run.mac  run_O3.mac  run_O4.mac  run_SS.mac  vis.mac
exp_val/include/: action.hh  construction.hh  generator.hh  generatorMessenger.hh  mysteppingaction.hh  physics.hh  runaction.hh
exp_val/scripts/: all_efficiencies_combined.csv  all_energyLoss_combined.csv  angle_val.py  angle_val_all.py  calculate_systematics.py  combine.py  compute.py  compute_chi2.py  energy_val.py  far_angle_val.py  hadd_combine.py  plot_errors.py
exp_val/src/: action.cc  construction.cc  detector.cc  generator.cc  generatorMessenger.cc  mysteppingaction.cc  physics.cc  runaction.cc  thesis.cc
thesis/: .gitignore  CMakeLists.txt  README.md  run.mac  vis.mac
thesis/include/: construction.hh  constructionMessenger.hh  detector.hh  generator.hh  generatorMessenger.hh  mirror_double_conic.hh  mirror_single_paraboloid.hh  mirror_wolter1.hh  myeventaction.hh  mysteppingaction.hh  mytrackingaction.hh  mytrajectory.hh  physics.hh  runaction.hh  trackinfo.hh  validationsteppingaction.hh
thesis/scripts/: analyze_reflections_all.py  analyze_reflections_one.py  background.py  calculate_flux.py  calculate_mean_energy.py  calculate_realistic_leakage.py  calculate_tid.py  compare.py  find_event.py  flux_calculation_results.csv  funnelling_efficiency.py  funnelling_efficiency_all.py  kappa.csv  mean_energy.py  plot_kappa.py  plot_trajectories.py  plots.py  projectedrange.py  proton_stopping_range.csv  requirements.txt
thesis/src/: action.cc  construction.cc  constructionMessenger.cc  detector.cc  generator.cc  mirror_double_conic.cc  mirror_single_paraboloid.cc  mirror_wolter1.cc  myeventaction.cc  mysteppingaction.cc  mytrackingaction.cc  mytrajectory.cc  physics.cc  runaction.cc  thesis.cc
(+90 files in other folders)
